assert-struct/tests/snapshots/nested_field_access__nested_comparison_failure.snap
---
source: assert-struct/tests/nested_field_access.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/nested_field_access_errors/nested_comparison_failure.rs:22:21
   |
22 |         data.score: > 50,  // 25 is not > 50, will fail
   |                     ^^^^ got 25
